// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Row /> by default matches with snapshot 1`] = `
<div
  className="sc-bwzfXH bxEdzb k-Row"
>
  <div
    className="sc-bdVaJa mTdHm k-Row__content"
  />
</div>
`;

exports[`<Row /> with props matches with snapshot 1`] = `
<div
  className="sc-bwzfXH bxEdzb k-Row k-Row--centered k-Row--dark k-Row--lightTopBorder k-Row--lightBottomBorder k-Row--padded custom-className"
>
  <div
    className="sc-bdVaJa mTdHm k-Row__content"
  >
    <p>
      custom content
    </p>
  </div>
</div>
`;
